--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -1,23 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/background_loginpage"
+    android:padding="16dp"
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/title_login"
+        android:textStyle="bold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="50dp"
         android:gravity="center"
-        android:text=
-        android:textSize="35sp"
+        android:text="@string/title_loginpage"
         android:textColor="@color/white"
+        android:textSize="35sp">
+        
+    </TextView>
+    
+    <EditText
+        android:layout_below="@+id/title_login"
+        android:id="@+id/username"
+        style="@style/Editext_loginpage"
+        android:text="@string/username">
 
+    </EditText>
 
+    <EditText
+        android:layout_below="@+id/username"
+        style="@style/Editext_loginpage"
+        android:text="@string/password">
 
+    </EditText>
 
 
 </RelativeLayout>
