--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,9 @@
         <item name="android:textColorHint">@color/white</item>
         <item name="android:padding">20dp</item>
         <item name="android:layout_margin">10dp</item>
+        <item name="android:background">#30FFFFFF</item>
+        <item name="android:drawablePadding">20dp</item>
+
 
     </style>
     
