--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,8 @@
     <color name="green">#00FF00</color>
     <color name="red">#FF0000</color>
     <color name="blue">#0000FF</color>
+
+
+    <color name="td_course">#df9eff</color>
+    <color name="tp_course">#84ea99</color>
 </resources>
