--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -5,22 +5,21 @@
     android:layout_height="match_parent"
     tools:context=".ScheduleFragment"
     android:id="@+id/parentRelative"
+    android:background="@drawable/wallpaper_schedule"
     android:orientation="vertical">
 
 
         <ScrollView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            android:layout_margin="20dp">
+            android:paddingBottom="20dp">
 
             <GridLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="12dp"
                 android:columnCount="2"
-                android:padding="12dp"
-                android:rowCount="5">
+                android:rowCount="6">
 
                 <TextView
                     style="@style/hour_string"
@@ -70,6 +69,11 @@
                     android:id="@+id/course5"
                     style="@style/course_string"
                     android:text="@string/course_sample" />
+
+                <TextView
+                    style="@style/hour_string"
+                    android:text="18:00"
+                    android:layout_marginBottom="20dp"/>
 
 
             </GridLayout>
