--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,21 +16,12 @@
 
 
     <!--    fragment schedule style    -->
-    <style name="Day_string" parent="TextAppearance.AppCompat">
-        <item name="android:textSize">25sp</item>
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="android:layout_margin">10dp</item>
-    </style>
-
-
     <style name="hour_string" parent="TextAppearance.AppCompat">
-        <item name="android:background">#fff6d6</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">#ffffff</item>
         <item name="android:layout_margin">10dp</item>
         <item name="android:padding">10dp</item>
     </style>
@@ -38,8 +29,9 @@
 
     <style name="course_string" parent="TextAppearance.AppCompat">
         <item name="android:background">@drawable/round_corner_view_course</item>
+        <item name="android:ems">12</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:layout_margin">10dp</item>
