--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,10 @@
         <item name="android:layout_margin">10dp</item>
         <item name="android:background">#30FFFFFF</item>
         <item name="android:drawablePadding">20dp</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:lines">1</item>
+        <item name="android:singleLine">true</item>
+
     </style>
 
 
