login page firebase

--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -27,15 +27,17 @@
         style="@style/Editext_loginpage"
         android:layout_below="@+id/title_login"
         android:drawableLeft="@drawable/ic_baseline_alternate_email_24"
-        android:hint="@string/username" />
+        android:hint="@string/username"
+        android:text="rayane.waidi@esme.fr"/>
 
     <EditText
         android:id="@+id/password"
         style="@style/Editext_loginpage"
         android:layout_below="@+id/username"
         android:drawableLeft="@drawable/ic_baseline_info_24"
+        android:hint="@string/password"
         android:inputType="textPassword"
-        android:hint="@string/password" />
+        android:text="RW1D"/>
 
     <Button
         android:id="@+id/login_button"
