--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -24,19 +24,25 @@
             android:textSize="22sp"
             android:textStyle="bold" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="10dp">
 
-        <TextView
-            android:id="@+id/note_ens"
-            style="@style/note_card_item"
-            android:layout_toRightOf="@id/note_name"
-            android:text="NE : 17.20" />
 
-        <TextView
-            android:id="@+id/note_exam"
-            style="@style/note_card_item"
-            android:layout_below="@id/note_ens"
-            android:layout_toRightOf="@id/note_name"
-            android:text="Examen : 15.64" />
+            <TextView
+                android:id="@+id/note_ens"
+                style="@style/note_card_item"
+                android:text="NE : 17.20" />
+
+            <TextView
+                android:id="@+id/note_exam"
+                style="@style/note_card_item"
+                android:text="Examen : 15.64" />
+
+        </LinearLayout>
 
     </RelativeLayout>
 
