--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="td_course">#df9eff</color>
     <color name="tp_course">#84ea99</color>
     <color name="tg_course">#ffc166</color>
+    <color name="toolbar_color">#4D32E1A1</color>
 </resources>
