--- a/app/src/main/res/layout/header_drawer_menu.xml
+++ b/app/src/main/res/layout/header_drawer_menu.xml
@@ -12,16 +12,28 @@
         android:src="@drawable/logo_student"/>
 
     <TextView
-        android:id="@+id/text_intro"
-        android:layout_alignParentEnd="true"
-        android:gravity="right"
-        android:layout_marginEnd="6dp"
+        android:id="@+id/text_intro_name"
+        android:layout_toRightOf="@+id/logo_student"
+        android:layout_marginLeft="12dp"
         android:layout_centerVertical="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:text="@string/text_intro_sample"/>
+        android:text="@string/text_intro_name"/>
+
+
+    <TextView
+        android:id="@+id/text_intro_class"
+        android:layout_marginLeft="12dp"
+        android:layout_below="@id/text_intro_name"
+        android:layout_alignParentEnd="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textStyle="italic"
+        android:textColor="@color/black"
+        android:text="@string/text_intro_class"/>
 
 </RelativeLayout>
