--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -1,85 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/parentRelative"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ScheduleFragment"
-    android:id="@+id/parentRelative"
-    android:background="@drawable/wallpaper_schedule"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".ScheduleFragment">
 
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingBottom="20dp">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="20dp">
 
-            <GridLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp"
-                android:layout_marginTop="@dimen/dimens_toolbar_height"
-                android:columnCount="2"
-                android:rowCount="6">
+        <GridLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimens_toolbar_height"
+            android:layout_marginBottom="12dp"
+            android:columnCount="2"
+            android:rowCount="6">
 
-                <TextView
-                    style="@style/hour_string"
-                    android:text="8:30" />
+            <TextView
+                style="@style/hour_string"
+                android:text="8:30" />
 
-                <TextView
-                    android:id="@+id/course1"
-                    style="@style/course_string"
-                    android:text="@string/course_sample" />
-
-
-                <TextView
-                    style="@style/hour_string"
-                    android:text="10:30" />
-
-                <TextView
-                    android:id="@+id/course2"
-                    style="@style/course_string"
-                    android:text="@string/course_sample" />
+            <TextView
+                android:id="@+id/course1"
+                style="@style/course_string"
+                android:text="@string/course_sample" />
 
 
-                <TextView
-                    style="@style/hour_string"
-                    android:text="12:30" />
+            <TextView
+                style="@style/hour_string"
+                android:text="10:30" />
 
-                <TextView
-                    android:id="@+id/course3"
-                    style="@style/course_string"
-                    android:text="@string/course_sample" />
-
-
-                <TextView
-                    style="@style/hour_string"
-                    android:text="14:00" />
-
-                <TextView
-                    android:id="@+id/course4"
-                    style="@style/course_string"
-                    android:text="@string/course_sample" />
+            <TextView
+                android:id="@+id/course2"
+                style="@style/course_string"
+                android:text="@string/course_sample" />
 
 
-                <TextView
-                    style="@style/hour_string"
-                    android:text="16:00" />
+            <TextView
+                style="@style/hour_string"
+                android:text="12:30" />
 
-                <TextView
-                    android:id="@+id/course5"
-                    style="@style/course_string"
-                    android:text="@string/course_sample" />
-
-                <TextView
-                    style="@style/hour_string"
-                    android:text="18:00"
-                    android:layout_marginBottom="20dp"/>
+            <TextView
+                android:id="@+id/course3"
+                style="@style/course_string"
+                android:text="@string/course_sample" />
 
 
-            </GridLayout>
-        </ScrollView>
+            <TextView
+                style="@style/hour_string"
+                android:text="14:00" />
 
+            <TextView
+                android:id="@+id/course4"
+                style="@style/course_string"
+                android:text="@string/course_sample" />
+
+
+            <TextView
+                style="@style/hour_string"
+                android:text="16:00" />
+
+            <TextView
+                android:id="@+id/course5"
+                style="@style/course_string"
+                android:text="@string/course_sample" />
+
+            <TextView
+                style="@style/hour_string"
+                android:layout_marginBottom="20dp"
+                android:text="18:00" />
+
+
+        </GridLayout>
+    </ScrollView>
 
 
 </LinearLayout>
