--- a/app/src/main/res/layout/header_drawer_menu.xml
+++ b/app/src/main/res/layout/header_drawer_menu.xml
@@ -2,38 +2,38 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:padding="20dp"
-    android:background="#67EAC1">
+    android:background="#67EAC1"
+    android:padding="20dp">
 
     <ImageView
         android:id="@+id/logo_student"
         android:layout_width="120dp"
         android:layout_height="match_parent"
-        android:src="@drawable/logo_student"/>
+        android:src="@drawable/logo_student" />
 
     <TextView
         android:id="@+id/text_intro_name"
-        android:layout_toRightOf="@+id/logo_student"
-        android:layout_marginLeft="12dp"
-        android:layout_centerVertical="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="12dp"
+        android:layout_toRightOf="@+id/logo_student"
+        android:text="@string/text_intro_name"
         android:textColor="@color/black"
-        android:text="@string/text_intro_name"/>
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
 
     <TextView
         android:id="@+id/text_intro_class"
-        android:layout_marginLeft="12dp"
-        android:layout_below="@id/text_intro_name"
-        android:layout_alignParentEnd="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textStyle="italic"
+        android:layout_below="@id/text_intro_name"
+        android:layout_alignParentEnd="true"
+        android:layout_marginLeft="12dp"
+        android:text="@string/text_intro_class"
         android:textColor="@color/black"
-        android:text="@string/text_intro_class"/>
+        android:textSize="20sp"
+        android:textStyle="italic" />
 
 </RelativeLayout>
