--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -7,12 +7,11 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
 
-
-        <ImageView
-            android:layout_width="65dp"
-            android:layout_height="@dimen/dimens_toolbar_height"
-            android:src="@drawable/esme_logo_2"
-            android:layout_gravity="center"/>
+    <ImageView
+        android:layout_width="65dp"
+        android:layout_height="@dimen/dimens_toolbar_height"
+        android:layout_gravity="center"
+        android:src="@drawable/esme_logo_2" />
 
 
 </androidx.appcompat.widget.Toolbar>
