--- a/app/src/main/res/menu/main_drawer_menu.xml
+++ b/app/src/main/res/menu/main_drawer_menu.xml
@@ -4,11 +4,11 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_schedule"
-            android:title="@string/nav_schedule"
-            android:icon="@drawable/ic_baseline_calendar_month_24"/>
+            android:icon="@drawable/ic_baseline_calendar_month_24"
+            android:title="@string/nav_schedule" />
         <item
             android:id="@+id/nav_note"
-            android:title="@string/nav_note"
-            android:icon="@drawable/ic_baseline_notes_24"/>
+            android:icon="@drawable/ic_baseline_notes_24"
+            android:title="@string/nav_note" />
     </group>
 </menu>
